# pysignals

./: README.md  main.py  pyproject.toml
signals/: __init__.py  computed.py  effect.py  flask_layer.py  shared.py  signals.py
tests/: test_signals.py
